feat: ajustes de refatoracao, ajustes nos testes