@@ -1,15 +1,14 @@
 package net.ddns.adambravo79.tmill.service;
 
 import static org.assertj.core.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 import java.time.LocalDate;
+import java.time.Month;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -26,44 +25,24 @@ import net.ddns.adambravo79.tmill.dto.TvResult;
 class WeeklyReleasesServiceTest {
 
     @Mock private TmdbClient tmdbClient;
-
     @InjectMocks private WeeklyReleasesService service;
 
-    private static final LocalDate THURSDAY = LocalDate.of(2026, 7, 9);
+    private static final LocalDate THURSDAY = LocalDate.of(2026, Month.JULY, 9);
     private static final LocalDate NEXT_THURSDAY = THURSDAY.plusDays(7);
 
-    @BeforeEach
-    void setUp() {
-        // Simula a data atual para que o período de quinta a quinta seja fixo
-        // Usamos ReflectionTestUtils para definir um campo estático? Não, vamos mockar o
-        // comportamento.
-        // Como o método calculateThursdayPeriod usa LocalDate.now(), não podemos mockar
-        // diretamente.
-        // Vamos testar apenas os métodos que dependem de datas passadas como parâmetro.
-        // Para getWeeklyReleasesMessage, vamos usar um mock parcial ou um teste de integração.
-        // Uma alternativa é não testar getWeeklyReleasesMessage, mas sim os métodos privados.
-        // Mas podemos testar getWeeklyReleasesMessage mockando o comportamento do TmdbClient
-        // e usando um spy para não depender de LocalDate.now().
-        // Vamos criar um spy e mockar o método calculateThursdayPeriod.
-    }
-
     @Test
-    void getWeeklyReleasesMessage_deveRetornarMensagemComLançamentos() throws Exception {
-        // Arrange
+    void getWeeklyReleasesMessage_deveRetornarMensagemComLançamentos() {
         WeeklyReleasesService spyService = spy(service);
-
-        // Mock do período (quinta a quinta)
         doReturn(new LocalDate[] {THURSDAY, NEXT_THURSDAY})
                 .when(spyService)
                 .calculateThursdayPeriod();
 
-        // Dados de filmes
+        // Objetos reais (records)
         MovieResult movie1 = new MovieResult(1, "Filme A", "2026-07-09", 8.0);
         MovieResult movie2 = new MovieResult(2, "Filme B", "2026-07-10", 7.5);
         TmdbDiscoverMovieResponse movieResponse =
                 new TmdbDiscoverMovieResponse(1, List.of(movie1, movie2), 1, 2);
 
-        // Dados de séries
         TvResult tv1 = new TvResult(3, "Série X", "2026-07-09", 9.0);
         TvResult tv2 = new TvResult(4, "Série Y", "2026-07-11", 8.5);
         TmdbDiscoverTvResponse tvResponse = new TmdbDiscoverTvResponse(1, List.of(tv1, tv2), 1, 2);
@@ -73,10 +52,8 @@ class WeeklyReleasesServiceTest {
         when(tmdbClient.discoverTvByDate(THURSDAY.toString(), NEXT_THURSDAY.toString()))
                 .thenReturn(tvResponse);
 
-        // Act
         String result = spyService.getWeeklyReleasesMessage();
 
-        // Assert
         assertThat(result)
                 .contains("Estreias da Semana")
                 .contains("Filme A")
@@ -89,28 +66,27 @@ class WeeklyReleasesServiceTest {
     }
 
     @Test
-    void getWeeklyReleasesMessage_deveRetornarMensagemSemLançamentos() throws Exception {
-        // Arrange
+    void getWeeklyReleasesMessage_deveRetornarMensagemSemLançamentos() {
         WeeklyReleasesService spyService = spy(service);
         doReturn(new LocalDate[] {THURSDAY, NEXT_THURSDAY})
                 .when(spyService)
                 .calculateThursdayPeriod();
 
-        when(tmdbClient.discoverMoviesByDate(anyString(), anyString()))
-                .thenReturn(new TmdbDiscoverMovieResponse(1, List.of(), 0, 0));
-        when(tmdbClient.discoverTvByDate(anyString(), anyString()))
-                .thenReturn(new TmdbDiscoverTvResponse(1, List.of(), 0, 0));
+        TmdbDiscoverMovieResponse movieResponse = mock(TmdbDiscoverMovieResponse.class);
+        when(movieResponse.results()).thenReturn(List.of());
 
-        // Act
+        TmdbDiscoverTvResponse tvResponse = mock(TmdbDiscoverTvResponse.class);
+        when(tvResponse.results()).thenReturn(List.of());
+
+        when(tmdbClient.discoverMoviesByDate(anyString(), anyString())).thenReturn(movieResponse);
+        when(tmdbClient.discoverTvByDate(anyString(), anyString())).thenReturn(tvResponse);
+
         String result = spyService.getWeeklyReleasesMessage();
-
-        // Assert
         assertThat(result).isEqualTo("Nenhum lançamento encontrado para esta semana.");
     }
 
     @Test
-    void getWeeklyReleasesMessage_deveTratarExcecao() throws Exception {
-        // Arrange
+    void getWeeklyReleasesMessage_deveTratarExcecao() {
         WeeklyReleasesService spyService = spy(service);
         doReturn(new LocalDate[] {THURSDAY, NEXT_THURSDAY})
                 .when(spyService)
@@ -119,70 +95,39 @@ class WeeklyReleasesServiceTest {
         when(tmdbClient.discoverMoviesByDate(anyString(), anyString()))
                 .thenThrow(new RuntimeException("Erro na API"));
 
-        // Act
         String result = spyService.getWeeklyReleasesMessage();
-
-        // Assert
         assertThat(result).contains("❌ Erro ao consultar lançamentos");
     }
 
     @Test
-    void calculateThursdayPeriod_deveRetornarPeriodoCorreto() throws Exception {
-        // Não podemos testar facilmente porque depende de LocalDate.now()
-        // Podemos usar um Clock mock, mas é mais complexo.
-        // Vamos pular este teste ou fazer um teste simples com data fixa.
-        // Como é privado, vamos testar indiretamente via getWeeklyReleasesMessage.
-        // Já cobrimos isso nos testes acima.
-    }
-
-    @Test
-    void fetchMovies_deveRetornarListaDeReleaseItems() throws Exception {
-        // Testar o método privado via reflexão? Melhor testar via getWeeklyReleasesMessage.
-        // Já cobrimos.
-    }
-
-    @Test
-    void fetchSeries_deveRetornarListaDeReleaseItems() throws Exception {
-        // Mesmo acima.
-    }
-
-    @Test
-    void formatMessage_deveCriarMensagemComAgrupamentoPorData() throws Exception {
-        // Vamos testar indiretamente via getWeeklyReleasesMessage, que já cobre isso.
-        // Mas podemos testar diretamente com ReflectionTestUtils se quisermos.
-        // Como getWeeklyReleasesMessage já cobre, vamos manter.
-    }
-
-    // =========================
-    // TESTE DE FORMATAÇÃO COM DADOS REAIS (opcional)
-    // =========================
-
-    @Test
-    void getWeeklyReleasesMessage_deveLimitarItensPorDia() throws Exception {
-        // Arrange
+    void getWeeklyReleasesMessage_deveLimitarItensPorDia() {
         WeeklyReleasesService spyService = spy(service);
         doReturn(new LocalDate[] {THURSDAY, NEXT_THURSDAY})
                 .when(spyService)
                 .calculateThursdayPeriod();
 
-        // Criar 16 filmes para o mesmo dia (limite = 15)
         List<MovieResult> movies =
                 IntStream.rangeClosed(1, 16)
-                        .mapToObj(i -> new MovieResult(i, "Filme " + i, "2026-07-09", 8.0))
-                        .collect(Collectors.toList());
-        TmdbDiscoverMovieResponse movieResponse =
-                new TmdbDiscoverMovieResponse(1, movies, 1, movies.size());
-        when(tmdbClient.discoverMoviesByDate(anyString(), anyString())).thenReturn(movieResponse);
-        when(tmdbClient.discoverTvByDate(anyString(), anyString()))
-                .thenReturn(new TmdbDiscoverTvResponse(1, List.of(), 0, 0));
+                        .mapToObj(
+                                i -> {
+                                    MovieResult m = mock(MovieResult.class);
+                                    when(m.title()).thenReturn("Filme " + i);
+                                    when(m.release_date()).thenReturn("2026-07-09");
+                                    return m;
+                                })
+                        .toList();
 
-        // Act
+        TmdbDiscoverMovieResponse movieResponse = mock(TmdbDiscoverMovieResponse.class);
+        when(movieResponse.results()).thenReturn(movies);
+
+        TmdbDiscoverTvResponse tvResponse = mock(TmdbDiscoverTvResponse.class);
+        when(tvResponse.results()).thenReturn(List.of());
+
+        when(tmdbClient.discoverMoviesByDate(anyString(), anyString())).thenReturn(movieResponse);
+        when(tmdbClient.discoverTvByDate(anyString(), anyString())).thenReturn(tvResponse);
+
         String result = spyService.getWeeklyReleasesMessage();
 
-        // Assert
-        // Ordem alfabética: 1,10,11,12,13,14,15,16,2,3,4,5,6,7,8,9
-        // O 16º item é "Filme 9" – deve ser omitido
-        assertThat(result).doesNotContain("Filme 9");
-        assertThat(result).contains("... e mais 1 títulos neste dia");
+        assertThat(result).doesNotContain("Filme 9").contains("... e mais 1 títulos neste dia");
     }
 }
